messages/Enumerated: Fix Java9+ deprecation for new Short.